[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player1_SpriteFrames_Orange.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player1_Script.gd" type="Script" id=2]
[ext_resource path="res://Health.gd" type="Script" id=3]
[ext_resource path="res://Life.gd" type="Script" id=4]
[ext_resource path="res://Game assets/heart.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.207843, 0.745098, 0.172549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.992157, 0.992157, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.207843, 0.207843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.992157, 0.992157, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CapsuleShape2D" id=3]
radius = 30.244
height = 75.9557

[node name="Player1" type="KinematicBody2D"]
position = Vector2( 72, 80 )
scale = Vector2( 0.88, 0.88 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Health" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Life" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Animated Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.41425, 0 )
scale = Vector2( 0.547343, 0.547343 )
frames = ExtResource( 1 )
animation = "idle"
frame = 5
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="ProgressBar" type="ProgressBar" parent="Animated Sprite"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -414.0
margin_top = -256.0
margin_right = -98.0
margin_bottom = -222.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart1" type="Sprite" parent="Animated Sprite/ProgressBar"]
position = Vector2( 243.63, -9.7466 )
texture = ExtResource( 5 )

[node name="heart2" type="Sprite" parent="Animated Sprite/ProgressBar"]
position = Vector2( 276.848, -9.7466 )
texture = ExtResource( 5 )

[node name="heart3" type="Sprite" parent="Animated Sprite/ProgressBar"]
position = Vector2( 310.066, -9.7466 )
texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 3 )

[connection signal="depleted" from="Health" to="." method="_on_Health_depleted"]
